syntax = "proto3";
option java_multiple_files = true;
package com.gcalsolaro.grpc.artifact.service;

import "Istanza.proto";

message IstanzaRequest {
    int32 idIstanza = 1;
}

message IstanzaResponse {
    bool esito = 1;
    com.gcalsolaro.grpc.artifact.model.Istanza istanza = 2;
} 

service IstanzaService {
    rpc recuperaIstanzaApi(IstanzaRequest) returns (IstanzaResponse);
}